# SpecCoarse_Cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  old.cpp  output_fmap.txt  visualizeFMap.m
src/: combinatorial_coarsening.cpp  combinatorial_coarsening.h  eigs_diagmass.cpp  eigs_diagmass.h  get_sparsity.cpp  get_sparsity.h  graph_kmedoids.cpp  graph_kmedoids.h  init_null_projection.cpp  init_null_projection.h  matrix_bellmanford.cpp  matrix_bellmanford.h  null_proj.cpp  null_proj.h  print_spmat.h  projection_mat.cpp  projection_mat.h  sp_cwiseSqrt.cpp  sp_cwiseSqrt.h  strength_of_connection.cpp  strength_of_connection.h
